2010-05-07  Deepak Bhole <dbhole@redhat.com>

	* netx/net/sourceforge/jnlp/Launcher.java
	(setContextClassLoaderForAllThreads): Change to set context CL only for
	given threadgroup.
	(launchApplication): Supply threadgroup to
	setContextClassLoaderForAllThreads.
	(createApplet): Same.

2010-05-07  Gary Benson  <gbenson@redhat.com>

	* netx/net/sourceforge/jnlp/runtime/JNLPSecurityManager.java:
	Removed a stray semicolon.

2010-05-06  Deepak Bhole <dbhole@redhat.com>

	* netx/net/sourceforge/jnlp/runtime/JNLPSecurityManager.java:
	Add imports missed in last commit.

2010-05-06  Deepak Bhole <dbhole@redhat.com>

	* netx/net/sourceforge/jnlp/runtime/JNLPSecurityManager.java
	(checkPermission): Allow Runtime and Security permission (for
	putProvider.SunJCE) if initiated for an https connection.
	(inTrustedCallChain): New method. Returns if given class/method is
	in the call chain, and everything upto there is trusted.

2010-05-05  Gary Benson  <gbenson@redhat.com>

	PR icedtea/481
	* ports/hotspot/src/share/vm/shark/sharkTopLevelBlock.cpp
	(SharkTopLevelBlock::improve_virtual_call): Disable an
	optimization that cannot currently be supported.

2010-04-30  Gary Benson  <gbenson@redhat.com>

	PR icedtea/324
	* ports/hotspot/src/share/vm/shark/sharkTopLevelBlock.cpp
	(SharkTopLevelBlock::do_aload): Cope with cases where
	the array's type is unknown.
	(SharkTopLevelBlock::do_astore): Likewise.

2010-04-29  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* overlays/openjdk/jdk/test/com/sun/media/sound/AudioFloatConverter/GetFormat.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/AudioFloatConverter/ToFloatArray.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/AudioFloatInputStream/Available.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/AudioFloatInputStream/Close.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/AudioFloatInputStream/GetFormat.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/AudioFloatInputStream/GetFrameLength.java,